<resources>
    <string name="app_name">WaterNeedPredicter</string>
    <string name="age">Age</string>
    <string name="create_person">Create person</string>
    <string name="back">Back</string>
    <string name="predicted_water_need">Predicted water need</string>
    <string name="day_of_birth">Day of birth</string>
    <string name="pick">Pick</string>
    <string name="weight">Weight</string>
    <string name="input_name_of_person">Name of Person</string>
    <string name="show_all_people">Overview</string>
    <string name="remove">Remove</string>
    <string-array name="weight_units">
        <item>kg</item>
        <item>g</item>
    </string-array>
    <string name="info">Info</string>
    <string name="subheader1">Which formula is used?</string>
    <string name="formula">The following table was used to calculate the needed water amount per day:</string>
    <string name="subheader2">Who has invented the formula?</string>
    <string name="inventor">Although many fonts confirm the accuracy of the used formula
        (see article <a href="http://bit.ly/waterneedformula">Water Need Formula</a>), there are no indicators about who
                            actually invented it.</string>
    <string name="subheader3">In which spectrum can the input values be?</string>
    <string name="spectrum">In order for the app to work properly, we have set a couple of value limits. The maximum
        weight value is 200 kg and the minimum age value of a pregnant person is 13 years old.</string>
    <string name="subheader4">What does the model assert? / How can the result be interpreted?</string>
    <string name="result">You can use this formula to be informed about your personal
                            recommended water supply. Please note: the results predict a general amount
        of <i>liquid</i> your body daily needs, and that consists of <b>water and food!</b></string>
    <string name="desc">Water need table</string>
    <string name="detail">Detail</string>
    <string name="pregnant">Pregnant</string>
    <string name="breastfeeding">Breastfeeding</string>
</resources>
