<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InfoActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/info_header_textView"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/info" />

    <!-- Subheader -->
    <TextView
        android:id="@+id/info_subheader1_textView"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/subheader1" />

    <!-- Text -->
    <TextView
        android:id="@+id/info_help1_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formula" />

    <TextView
        android:id="@+id/info_subheader2_textView"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/subheader2" />

    <TextView
        android:id="@+id/info_help2_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inventor" />

    <TextView
        android:id="@+id/info_subheader3_textView"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/subheader3" />

    <TextView
        android:id="@+id/info_help3_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spectrum" />

    <TextView
        android:id="@+id/info_subheader4_textView"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/subheader4" />

    <TextView
        android:id="@+id/info_help4_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result" />


    <Button
        android:id="@+id/info_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />
</LinearLayout>